# music

./: .clippy.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  rustfmt.toml
.github/workflows/: build.yml  release.yml
examples/: README.md  final_project.rs  mary_had_a_little_lamb.rs
examples/final_project/: bass.rs  drums.rs  guitar.rs  main.rs  melody.rs
src/: lib.rs  main.rs  render_to_wav.rs
src/instrument_tools/: mod.rs
src/instrument_tools/strings/: mod.rs
src/interactive/: file_mode.rs  live_mode.rs  mod.rs
src/note/: chord.rs  length.rs  mod.rs  sources.rs  timbre.rs
src/piece/: line.rs  mod.rs
src/play/: mod.rs  render_to_wav.rs  sources.rs
src/scales/: mod.rs  tet12.rs
src/scales/tet12/: mod.rs  modes.rs
