[package]
name = "symphoxy"
description = "A music-as-code library and synthesizer for rust."
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
homepage = "https://www.jackpapel.com/"
repository = "https://www.github.com/jack-papel/symphoxy"
readme = "README.md"
keywords = ["music", "audio", "synthesizer"]
authors = ["Jack Papel"]
categories = ["multimedia::audio"]

[dependencies]
lazy_static = "1.5.0"
rodio = { version = "0.20.1", optional = true }
itertools = "0.14.0"
hound = { version = "3.5.1", optional = true }

[dev-dependencies]
symphoxy = { path = ".", features = ["interactive-tui"] }
lazy_static = "1.5.0"

[features]
default = ["live-output", "wav-output"]
live-output = ["dep:rodio"]
wav-output = ["dep:hound", "dep:rodio"]
interactive-tui = []